# pcp-rust

./: .editorconfig  .gitignore  LICENSE.md  README.md
documentation/: README.md  main.tex
presentation/: 01-topic-intro.tex  02-topic-basics.tex  02-topic-borrowing.tex  03-topic-traits.tex  04-topic-typestate.tex  05-topic-communication-tasks.tex  05-topic-concurrency.tex  06-topic-patterns-matching.tex  07-topic-spawn.tex  08-topic-cargo.tex  09-topic-end.tex  09-topic-technical-conclusion.tex  10-topic-personal-conclusion.tex  11-topic-end.tex  12-topic-bonus.tex  HSLU_Thesis_Beamer_Layout.sty  README.md  def-code.tex  main.tex  topic-borrowing.tex
rust/: Cargo.toml
rust/example-borrow/: Cargo.toml
rust/example-borrow/src/: main.rs
rust/example-channels/: Cargo.toml
rust/example-channels/src/: main.rs
rust/example-filter-map-reduce/: Cargo.toml
rust/example-filter-map-reduce/src/: main.rs
rust/example-patterns/: Cargo.toml
rust/example-patterns/src/: main.rs
rust/example-reqwest/: Cargo.toml
rust/example-reqwest/src/: main.rs
rust/example-threads/: Cargo.toml
rust/example-threads/src/: main.rs
rust/example-trait-bounds/: Cargo.toml
rust/example-trait-bounds/src/: main.rs
rust/example-traits/: Cargo.toml
rust/example-traits-associated-types/: Cargo.toml
rust/example-traits-associated-types/src/: main.rs
rust/example-traits/src/: attributes.rs  circle.rs  dimensions.rs  main.rs  shape.rs  square.rs
rust/example-typestate-programming/: Cargo.toml
rust/example-typestate-programming/src/: main.rs  states.rs
rust/exercise-clojure-w5-2/: Cargo.toml
rust/exercise-clojure-w5-2/src/: main.rs
rust/exercise-java-w8-4/: Cargo.toml
rust/exercise-java-w8-4/src/: main.rs
rust/exercise-prolog-w3-1/: Cargo.toml
rust/exercise-prolog-w3-1/src/: main.rs
rust/src/: main.rs
(+25 files in other folders)
