[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"

[workspace]
members = [
    "hello-world",
    "exercise-prolog-w3-1",
    "exercise-clojure-w5-2",
    "exercise-java-w8-4",
    "example-reqwest",
    "example-borrow",
    "example-filter-map-reduce",
    "example-typestate-programming",
    "example-traits",
    "example-trait-bounds",
    "example-traits-associated-types",
    "example-channels",
    "example-threads"
]
