[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"

[workspace]
members = [
    "hello-world",
    "exercise-clojure-w5-2",
    "exercise-java-w8-4",
    "exercise-prolog-w3-1",
    "example-borrow",
    "example-channels",
    "example-filter-map-reduce",
    "example-patterns",
    "example-reqwest",
    "example-threads",
    "example-trait-bounds",
    "example-traits",
    "example-traits-associated-types",
    "example-typestate-programming",
]
